--- a/Project1/UnitTest1/UnitTest1.vcxproj.filters
+++ b/Project1/UnitTest1/UnitTest1.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="XOREncryptTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BigSignedIntegerTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
